JavaFX Helpers 1.20.0
* Java 24
* JavaFX 24